Adjust z-index of project-link to fix overlapping image bug

--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -53,6 +53,12 @@
     z-index:99;
 }
 
+.project-link-text {
+    max-width:40%;
+    max-height:100%;
+    margin-left:5%;
+}
+
 .extra {
     min-height:10%;
     background:black;
